# SpatialProteomicsQC

./: .bumpversion.toml  .gitignore  .pre-commit-config.yaml  .secrets.baseline  Class_Test.ipynb  InteractiveDataModel.ipynb  Interactive_Data_Model.ipynb  LICENSE  MANIFEST.in  NEWS.md  PlantSpatialProteomics.ipynb  README.md  UploadTest.txt  class.py  domaps.py  eLife_markers.txt  pyproject.toml  python-package.yml  requirements.txt  requirements_strict.txt  setup.py  test.ipynb  workflow testing.ipynb
.github/workflows/: bump_version.yml  create_release.yml  publish_on_pypi.yml  python-package.yml
annotations/: Homo sapiens - Uniprot.csv
annotations/complexes/: Homo sapiens - Uniprot.csv
domaps/: __init__.py  constants.py  domaps.py
domaps/annotations/complexes/: Arabidopsis thaliana - Araport.csv  Homo sapiens - Uniprot.csv  Mus musculus - Uniprot.csv  Saccharomyces cerevisiae - Uniprot.csv
domaps/annotations/idmapping/: Homo sapiens - UP000005640.tab  Homo sapiens - uniprot reference_swissprot.txt  Human - UP000005640.tab
domaps/annotations/organellemarkers/: Arabidopsis thaliana - Araport.csv  Homo sapiens - Uniprot.csv  Mus musculus - Uniprot.csv  Saccharomyces cerevisiae - Uniprot.csv
domaps/gui/: __init__.py  gui.py
domaps/network/: __init__.py  network.py
domaps/referencedata/: HeLa 1x100min DDA.json
domaps/tests/: test_inputvalidation.py  test_usecases.py
domaps/webapp/: QCtool.ipynb  QCtool.py
notebooks/: Retrieval of MS level data.ipynb
requirements/: requirements.txt  requirements_development.txt  requirements_gui.txt  requirements_stable.txt  requirements_viz.txt
scripts/: covertDIANNtoMQ.py  quantstojson.py
tests/: test_SpatialDataSetComparison.py  test_usecases.py
tests/data/: DDA_Borner_short_AnalysedDatasets.json  DDA_Borner_short_dfoutput.csv  DDA_Borner_short_settings.json  HCC827-gef.csv  HCC827-gef_settings.json  Kozik_Dom_Data_short_overview.csv  Kozik_Dom_Data_short_settings.json  hyperLOPIT_U2OS_short.csv  hyperLOPIT_U2OS_short_dfoutput.csv  hyperLOPIT_U2OS_short_settings.json
webapp/: QCtool.ipynb  QCtool.py  textfragments.json
(+16 files in other folders)
