[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "domaps"
requires-python = ">=3.8"
dynamic = ["version", "dependencies", "optional-dependencies"]

authors = [
    {name = "Julia Schessner"},
    {name = "Vincent Albrecht"}
]
maintainers = [
    {name = "Julia Schessner", email = "schessner@biochem.mpg.de"}
]

description = "Python library for dynamic organellar maps"
readme = "README.md"
keywords = [
    "mass spectrometry",
    "proteomics",
    "bioinformatics",
    "dynamic organellar maps",
    "spatial proteomics"
]
license = {file = "LICENSE.txt"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    # "Development Status :: 6 - Mature",
    # "Development Status :: 7 - Inactive"
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[project.urls]

Paper = "https://www.nature.com/articles/s41467-023-41000-7"
Repository = "https://github.com/JuliaS92/SpatialProteomicsQC"
#Documentation = "https://readthedocs.org"
Changelog = "https://github.com/me/spam/blob/master/NEWS.md"
Issues = "https://github.com/JuliaS92/SpatialProteomicsQC/issues"
"Hosted webapp" = "https://domabc.bornerlab.org"

[tool.setuptools.packages.find]
include = ["domaps*"]

[tool.setuptools.package-data]
domaps = ["annotations/*", "referencedata/*", "img/*"]

[tool.setuptools.dynamic]
# https://stackoverflow.com/a/73600610
dependencies = {file = ["requirements/requirements.txt"]}
optional-dependencies.stable = { file = [ "requirements/requirements_stable.txt"
] }
optional-dependencies.gui = { file = [ "requirements/requirements_gui.txt", "requirements/requirements_stable.txt"
] }
optional-dependencies.development = { file = ["requirements/requirements_development.txt"
] }

version = {attr = "domaps.__version__"}

#[project.scripts]
#domabc = "domaps.gui:serve"
